instructions.Instructions.scala.code

brushdown()

for (n<- 0 to 2)

  n=0
  forward()
  n=n+1

for (n<- 0 to 2)

  n=0
  right()
  n=n+1



for (n<- 0 to 2)

  n=0
  backward()
  n=n+1



left()



brushup()
forward()